@@ -162,8 +162,10 @@ namespace Rcpp{
             return internal::Rcpp_eval_impl( Storage::get__(), env);
         }
 
-        void update( SEXP x){
-            SET_TYPEOF( x, LANGSXP );
+        void update(SEXP x) {
+            if (TYPEOF(x) != LANGSXP) {
+                Storage::set__(r_cast<LANGSXP>(x));
+            }
             SET_TAG( x, R_NilValue );
         }
 
