@@ -143,14 +143,9 @@ namespace Rcpp {
         }
         template<>
         inline SEXP r_true_cast<LISTSXP>(SEXP x) {
-            switch( TYPEOF(x) ){
-            case LANGSXP:
-                {
-                    Shield<SEXP> y( Rf_duplicate( x ));
-                    SET_TYPEOF(y,LISTSXP);
-                    return y;
-                }
-            default:
+            if (TYPEOF(x) == LANGSXP) {
+                return Rf_cons(CAR(x), CDR(x));
+            } else {
                 return convert_using_rfunction(x, "as.pairlist" );
             }
         }
